fix(page-notice): prevent CTA text from wrapping

--- a/src/less/section-notice/base/section-notice.less
+++ b/src/less/section-notice/base/section-notice.less
@@ -64,6 +64,7 @@ span[role="region"].section-notice {
 }
 
 .section-notice__footer {
+    flex-shrink: 0;
     margin-left: auto;
     padding-left: 0;
     width: auto;
